Changelog
=========

2019.2.0 (unreleased)
---------------------

- Add webaction forms (add and edit) and management view. [njohner]
- Fix solr error during copy/paste of word document. [njohner]
- Add archival file management view on dossier level. [njohner]
- Show archival file state on documents overview for managers. [njohner]
- Fix tests failing due to timezone leading to date shift. [njohner]
- Display user chosen Favorites as a Oneoffixx template group. [Rotonen]
- Add a filter to the Oneoffixx template selection wizard. [Rotonen]
- Use user chosen favorites as the default Oneoffixx template group. [Rotonen]
- Display user chosen Favorites as an Oneoffixx template group. [Rotonen]
- Prevent tasks from being created as private or switched to private when feature is not enabled. [Rotonen, phgross]
- Bump ftw.mail to 2.6.0 to get error logging on inbound mail failures. [lgraf]
- Handle complex URLs as titles on journal PDF exports. [Rotonen]
- Add documentation for documents endpoints (checkin/out, locking, versions) [phgross]
- Move translation overrides for ftw.mail from og.mail to og.base. [lgraf]
- Add solrsearch REST API endpoint. [phgross]
- Add webactions in user menu. [njohner]
- Add webaction action-buttons for documents, tasks and proposals. [njohner]
- Add webaction actions-menu items. [njohner]
- Add webaction title-buttons. [njohner]
- Add WebActionsProvider. [njohner]
- Add mapping between public and gever permissions. [njohner]
- Disable CSRF protect on webaction api post requests. [njohner]
- Warn the user on overviews and overlays of trashed mails or documents. [Rotonen]
- Include `include_root` parameter to `@navigation` endpoint to include the root object to the tree. [elioschmutz]
- Include `root_interface` and `content_interfaces` parameter to `@navigation` endpoint to customize the navigation items [elioschmutz]
- Include `@type`, `current` and `current_tree` property to `@navigation`-items. [elioschmutz]