@@ -337,4 +337,4 @@ class SelectDossierTemplateView(FormWrapper):
         return is_dossier_template_feature_enabled() and \
             self.context.is_leaf_node() and \
             api.user.has_permission('opengever.dossier: Add businesscasedossier', obj=self.context) and \
-            self.context.allow_add_businesscase_dossier
+            (self.context.allow_add_businesscase_dossier or self.context.addable_dossier_templates)
